# p-token-migration

./: .gitignore  Cargo.toml  Makefile  README.md
cli/: Cargo.toml
cli/src/: client.rs  file.rs  main.rs  validator.rs
programs/activator/: Cargo.toml
programs/activator/src/: lib.rs
programs/stub/: Cargo.toml
programs/stub/src/: lib.rs
scripts/: vars.env
