[workspace]
members = [
    "cli",
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
cbmt-program-activator = { path = "./programs/activator", version = "0.1.0" }
solana-logger = "3.0"
solana-program = "3.0"
solana-rpc = { git = "https://github.com/febo/agave.git", branch = "p-token-swap" }
solana-rpc-client = { git = "https://github.com/febo/agave.git", branch = "p-token-swap" }
solana-rpc-client-api = { git = "https://github.com/febo/agave.git", branch = "p-token-swap" }
solana-sdk = "3.0"
solana-test-validator = { git = "https://github.com/febo/agave.git", branch = "p-token-swap" }
solana-transaction-status-client-types = { git = "https://github.com/febo/agave.git", branch = "p-token-swap" }
