[package]
name = "p-token-migration-simulator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simulate"
path = "src/main.rs"

[dependencies]
agave-feature-set = { version = "3.1", git = "https://github.com/febo/agave.git", branch = "p-token-migration" }
agave-snapshots = { workspace = true }
cbmt-program-activator = { workspace = true }
ctrlc = "3.5.0"
indicatif = { version = "0.18.0", features = ["tokio"] }
ratatui = "0.29.0"
solana-feature-gate-interface = "3.0"
solana-loader-v3-interface = "6.1"
solana-logger = { workspace = true }
solana-program = { workspace = true }
solana-rpc = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-sdk-ids = "3.0"
solana-system-interface = "2.0.0"
solana-test-validator = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
spl-token-interface = "2.0.0"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
